--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <head> 
-
+<link href='./css/styles.css' rel='stylesheet'></link>
+<script src="js/scripts.js"></script>
     </head>
     <body>
 
