--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
     <head> 
 <link href='./css/styles.css' rel='stylesheet'></link>
-<script src="js/scripts.js"></script>
+<script src="js/scripts.js" defer></script>
     </head>
     <body>
-
+        <h1>Calculator</h1>
 </body>
